# RustWebservice

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
resources/static/: button.js  styles.css
resources/templates/: index.html
src/: lib.rs  logger.rs  main.rs
src/webserver/: mod.rs  server_config.rs
src/webserver/client_handling/: mod.rs
src/webserver/cookie/: mod.rs
src/webserver/files/: mod.rs
src/webserver/http_packet/: mod.rs
src/webserver/http_packet/header/: connection.rs  mod.rs
src/webserver/http_packet/header/content_types/: application.rs  audio.rs  font.rs  image.rs  mod.rs  multipart.rs  text.rs  video.rs
src/webserver/http_packet/header/headers/: content_security_policy.rs  cookie.rs  method.rs  mod.rs
src/webserver/logger/: mod.rs
src/webserver/middleware/: mod.rs
src/webserver/proxy/: mod.rs
src/webserver/requests/: mod.rs
src/webserver/responses/: mod.rs  response_codes.rs  status_code.rs
src/webserver/route/: http_method.rs  mod.rs
src/webserver/server_config/: mod.rs
