[package]
name = "sunweb"
version = "0.1.11"
edition = "2024"
authors = ["Sunnickel"]
categories = ["web-programming::http-server", "web-programming"]
description = "A brief description of what your package does"
homepage = "https://github.com/Sunnickel/SunWeb"
repository = "https://github.com/Sunnickel/SunWeb"
readme = "README.md"
license = "MIT"
keywords = ["web", "http", "server"]

[dependencies]
chrono = "0.4.42"
log = "0.4.28"
rustls = "0.23.32"
rustls-pki-types = "1.12.0"